Fix text-wrap in disclaimer-message.

--- a/html/scss/caps.scss
+++ b/html/scss/caps.scss
@@ -24,3 +24,8 @@ ul.attachments {
 div > p:last-child, dl:last-child, ul:last-child, ol:last-child {
     margin-bottom: 0px;
 }
+
+.topbar {
+    height: auto;
+    min-height: 4.375rem;
+}
